# WallpaperAutomata2

./: .gitignore  LICENSE  README.md  setup.cfg
WallpaperAutomata/: config.py  settings.py
WallpaperAutomata/Commands/: command_bootstrap.py  command_interface.py  pexel_command.py
WallpaperAutomata/Controllers/: controller_interface.py
WallpaperAutomata/Vendors/: Pexels.py  Vendor_Interface.py  __init__.py  pexels.py  pexels_vendor.py  vendor_interface.py
WallpaperAutomata/Wallpapper/: Config.py  SaveImage.py  __init__.py  config_local_data.py  paper.py  save_image.py
WallpaperAutomata/vendors/: Vendor_Interface.py
tests/Commands/: command_bootstrap_test.py
tests/Vendors/: Pexels.py  pexels_vendor_test.py
tests/Wallpaper/: ConfigTest.py  PaperTest.py  SaveImageTest.py
