[metadata]
name = WallpaperAutomata
version = 0.0.1
description = 'Auto set wallpaper for Gnome'
author = 'Fernando Cruz'
author_email = 'quattrococodrilo@gmail.com'

[options]
packages = find:
install_requires =
    requests
    pyyaml
    mypy
    types-requests

[options.packages.find]
exclude=
    test*

[options.entry_points]
console_scripts=
    paper=WallpaperAutomata.bin.entry_point:exec
